// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="components-tags-editor-tag-m__tag"
>
  <span>
    Some Label
  </span>
  <FaClose
    className="components-tags-editor-tag-m__icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when is being deleted 1`] = `
<div
  className="components-tags-editor-tag-m__tag"
>
  <span>
    Some Label
  </span>
  <div
    className="components-tags-editor-tag-m__loader"
  >
    <Loader
      size="small"
      type="inverse"
    />
  </div>
</div>
`;
